Roteiro 10: Criação do Dockerfile